<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="works.jacksdonuts.view.account.AccountFragment">


    <Button
        android:id="@+id/fragment_account_login_button"
        style="@style/Button.Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@color/loginButtonColor"
        android:text="@string/fragment_account_login_button" />

    <Button
        android:id="@+id/fragment_account_sign_up_button"
        style="@style/Button.Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/fragment_account_login_button"
        android:layout_below="@+id/fragment_account_login_button"
        android:layout_marginTop="38dp"
        android:background="@color/signUpButtonColor"
        android:text="@string/fragment_account_sign_up_button" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/login_screen_background" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/fragment_account_sign_up_text" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:textColor="@color/blue"
        android:text="@string/fragment_account_terms_and_conditions_text" />


</RelativeLayout>
